@@ -105,6 +105,16 @@ typedef enum
     CONTENT_COLOR_ALPHA = CAIRO_CONTENT_COLOR_ALPHA
 } Content;
 
+//TODO: Mark as new in 1.10
+typedef enum
+{
+    DEVICE_TYPE_DRM = CAIRO_DEVICE_TYPE_DRM,
+    DEVICE_TYPE_GL = CAIRO_DEVICE_TYPE_GL,
+    DEVICE_TYPE_SCRIPT = CAIRO_DEVICE_TYPE_SCRIPT,
+    DEVICE_TYPE_XCB = CAIRO_DEVICE_TYPE_XCB,
+    DEVICE_TYPE_XLIB = CAIRO_DEVICE_TYPE_XLIB,
+    DEVICE_TYPE_XML = CAIRO_DEVICE_TYPE_XML
+} DeviceType;
 
 typedef enum
 {
